# cpeditor

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .header  .licenserignore  .licenseronly  .licenserrc  .misspell-fixer 2.ignore  .travis.yml  :w  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_ja-JP.md  CONTRIBUTING_pt-BR.md  CONTRIBUTING_ru-RU.bak  CONTRIBUTING_ru-RU.md  CONTRIBUTING_zh-CN.md  CONTRIBUTING_zh-TW.md  DONATE.md  DONATE_ja-JP 2.md  DONATE_ja-JP.md  DONATE_pt-BR.md  DONATE_ru-RU.md  DONATE_zh-CN.md  DONATE_zh-TW.md  DONATORS.md  DONORS.md  LICENSE  README.md  README_el-GR.md  README_ja-JP.md  README_pt-BR.md  README_ru-RU.md  README_zh-CN.md  README_zh-TW.md  (+11 more)
.ci/: STABLE_VERSION
.ci/DEB/: cpeditor.desktop
.ci/aur/: .SRCINFO  PKGBUILD
.ci/linux/: cpeditor.desktop  default.desktop  install_ecm.sh
.ci/mac/: Info.plist.in
.ci/win/: install_ecm.bat  install_ksh.bat  win-setup.iss
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: aur-test.yml  build_test.yml  ccpp.yml  check_format.yml  check_srcinfo.yml  check_translations.yml  clang-format.yml  clang_tidy.yml  format_test.yml  misspell-fixer.yml  push_aur.yml  push_flatpak.yml  push_snap.yml  release.yml  release_appimage.yml  release_aur.yml  release_checksums.yml  release_deb.yml  release_flatpak.yml  release_linux.yml  release_snap.yml  test.yml  update-donors.yml
.kilo/plans/: 1781525878000-fix-cses-button.md
cmake/: Info.plist.in  cpeditor.appdata.xml.in  gitsha.hpp.in  portable.hpp.in  version.hpp.in  version.rc.in
cmake/aur/: .SRCINFO.in  PKGBUILD.in
doc/: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  INSTALL.md  INSTALL_ru-RU.md  INSTALL_zh-CN.md  MANUAL.md  MANUAL_ru-RU.bak  MANUAL_ru-RU.md  MANUAL_zh-CN.md  README_zh-CN.md  VERSIONING.md
enc_temp_folder/ebf248bb49bf4355e6667534bfc195b/: appwindow.cpp
include/: BaseFiles.hpp  ChildManager.hpp  CompanionServer.hpp  Compiler.hpp  Core.hpp  DiffViewer.hpp  EditorTheme.hpp  Expand.hpp  ExtendedEditorFeatures.hpp  Formatter.hpp  IO.hpp  MessageLogger.hpp  Runner.hpp  SettingsManager.hpp  TestCases.hpp  UpdateNotifier.hpp  Util.hpp  appwindow.hpp  cftools.hpp  debugcontrol.hpp  editortheme.h  expand.hpp  mainwindow.hpp  preferencedialog.h  preferencewindow.hpp
include/Core/: Checker.hpp  Compiler.hpp  EventLogger.hpp  Formatter.hpp  MessageLogger.hpp  README.md  Runner.hpp  Settings.hpp  SettingsHelper.hpp  SettingsInfo.hpp  SettingsManager.hpp
include/Extensions/: CFTool.hpp  CFTools.hpp  CompanionServer.hpp  EditorTheme.hpp  ExtendedEditorFeatures.hpp
include/Preferences/: CodeSnippetsPage.hpp  PathItem.hpp  PreferencesGridPage.hpp  PreferencesHomePage.hpp  PreferencesPage.hpp  PreferencesPageTemplate.hpp  PreferencesWindow.hpp  README.md  ShortcutItem.hpp  ValueWrapper.hpp
include/Telemetry/: README.md  UpdateNotifier.hpp
include/Widgets/: DiffViewer.hpp  README.md  TestCase.hpp  TestCaseEdit.hpp  TestCases.hpp
resources/: language_config.json  macos-resources.qrc  resources.qrc
resources/styles/: drakula.xml  monkai.xml  resources - Shortcut.lnk  solarised.xml  solarizedDark.xml
resources/translations/: SimplifiedChinese.ts
scripts/: newReleaseCycle.sh  release.sh
scripts/aur/: .SRCINFO.in  PKGBUILD.in
src/: Application.cpp  Application.hpp  ChildManager.cpp  CompanionServer.cpp  Compiler.cpp  Core.cpp  DiffViewer.cpp  Expand.cpp  ExtendedEditorFeatures.cpp  Formatter.cpp  IO.cpp  MessageLogger.cpp  Runner.cpp  SettingsManager.cpp  SettngsManager.cpp  SignalHandler.cpp  SignalHandler.hpp  TestCases.cpp  UpdateNotifier.cpp  Util.cpp  Util.hpp  application.cpp  application.hpp  appwindow.cpp  appwindow.hpp  cftools.cpp  debugcontrol.cpp  debugcontrol.hpp  editortheme.cpp  expand.cpp  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.hpp  preferencewindow.cpp  signal.cpp  signal.hpp
src/CodeEditor/: CodeEditor.cpp  CodeEditor.hpp  CodeEditorSideBar.cpp  CodeEditorSideBar.hpp  KSHRepository.cpp  KSHRepository.hpp
src/Core/: Checker.cpp  Checker.hpp  Compiler.cpp  Compiler.hpp  EventLogger.cpp  EventLogger.hpp  FakeVimCommand.cpp  FakeVimCommand.hpp  FakeVimCommands.cpp  FakeVimCommands.hpp  FakeVimProxy.cpp  FakeVimProxy.hpp  Formatter.cpp  Formatter.hpp  KSyntaxHighlightingRepository.cpp  KSyntaxHighlightingRepository.hpp  MessageLogger.cpp  MessageLogger.hpp  README.md  README_zh-CN.md  Runner.cpp  Runner.hpp  SessionManager.cpp  SessionManager.hpp  Settings.cpp  SettingsManager.cpp  Stopwatch.cpp  Stopwatch.hpp  StyleManager.cpp  StyleManager.hpp  TestCasesCopyPaster.cpp  TestCasesCopyPaster.hpp  Translator.cpp  Translator.hpp
src/Editor/: CodeEditor.cpp  CodeEditor.hpp  CodeEditorSideBar.cpp  CodeEditorSideBar.hpp  FakeVimCommand.cpp  FakeVimCommand.hpp  FakeVimCommands.cpp  FakeVimCommands.hpp  FakeVimProxy.cpp  FakeVimProxy.hpp  HighLighter.cpp  HighLighter.hpp  KSHRepository.cpp  KSHRepository.hpp  LanguageRepository.cpp  LanguageRepository.hpp
src/Extensions/: CFTool.cpp  CFTool.hpp  CFTools.cpp  CSESTool.cpp  CSESTool.hpp  ClangFormatter.cpp  ClangFormatter.hpp  CodeFormatter.cpp  CodeFormatter.hpp  CompanionServer.cpp  CompanionServer.hpp  EditorTheme.cpp  EditorTheme.hpp  (+13 more)
tools/: build.sh  buildDEB.sh  clang-tidy-wrapper.sh  clangTidyCheck.sh  format.sh  genSRCINFO.sh  genSettings.py  genSettings.sh  getDonors.py  install_ecm.bat  install_ksh.bat  install_ksh.sh  newFile.sh  newReleaseCycle.sh  updateTranslation.bat  updateTranslation.sh  updateTranslation_simple.sh  updateTranslations.sh
translations/: Russian.ts  SimplifiedChinese.ts  ar_EG.ts  cpeditor_el_GR.ts  cpeditor_es_MX.ts  cpeditor_pt_BR.ts  cpeditor_ru_RU.ts  cpeditor_zh_CN.ts  cpeditor_zh_TW.ts  el_GR.ts  es_MX.ts  hi_IN.ts  pt_BR 2.ts  pt_BR.ts  ru_RU.ts  translations.qrc  zh_CN.ts  zh_TW.ts
ui/: appwindow.ui  debugcontrol.ui  diffviewer.ui  expand.ui  mainwindow.ui  preferencewindow.ui
(+120 files in other folders)
